--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -41446,5 +41446,125 @@
         "published": "Tue, 06 Jan 2026 04:01:34 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Even Healthcare Raises $20 Mn To Expand Hospital Network\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2024/10/Untitled-design-14.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Even Healthcare has raked in $20 Mn (INR 180.5 Cr) in a fresh funding round from existing investors like Lachy&#8230;"
+    },
+    {
+        "id": "https://www.theverge.com/tech/854662/nvidia-g-sync-pulsar-monitors-abmient-adaptive-technology-auto-brightness",
+        "title": "Nvidia\u2019s new G-Sync monitors automatically adjust brightness just like a laptop",
+        "link": "https://www.theverge.com/tech/854662/nvidia-g-sync-pulsar-monitors-abmient-adaptive-technology-auto-brightness",
+        "published": "2026-01-06T00:12:18-05:00",
+        "source": "The Verge",
+        "summary": "Nvidia is bringing a new set of G-Sync Pulsar monitors to the market this week that will automatically adjust brightness and color based on the ambient lighting in a room. Much like a modern laptop, these new monitors have a built-in light sensor that measures the brightness and color temperature of an environment to enable [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/854610/nvidia-dlss-4-5-announcement-multi-frame-generation-6x-specs",
+        "title": "Nvidia announces DLSS 4.5 with 6x Frame Generation and improved image quality",
+        "link": "https://www.theverge.com/tech/854610/nvidia-dlss-4-5-announcement-multi-frame-generation-6x-specs",
+        "published": "2026-01-06T00:04:55-05:00",
+        "source": "The Verge",
+        "summary": "Nvidia is announcing its next major update to its Deep Learning Super Sampling (DLSS) feature at CES today. DLSS 4.5 includes Nvidia's second-generation Super Resolution transformer model and a new 6x Multi Frame Generation mode for RTX 50-series GPUs that uses AI to generate up to five additional frames for every single rendered one. DLSS [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/850919/smart-appliance-emerson-smartvoice-ces",
+        "title": "Emerson\u2019s SmartVoice devices follow verbal instructions without Wi-Fi or a hub",
+        "link": "https://www.theverge.com/tech/850919/smart-appliance-emerson-smartvoice-ces",
+        "published": "2026-01-06T00:01:00-05:00",
+        "source": "The Verge",
+        "summary": "A new line of small appliances and devices from IAI Smart, billed as Emerson Smart products, are now available that will let you operate fans, heaters, smart plugs, and air fryers with your voice - with no apps, Wi-Fi, or smart home connection at all. Using the company's SmartVoice technology, the devices react to wake-up [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/ai/agibots-humanoid-robots-can-give-directions-and-learn-your-tiktok-dances-045049798.html?src=rss",
+        "title": "Agibot's humanoid robots can give directions and learn your TikTok dances",
+        "link": "https://www.engadget.com/ai/agibots-humanoid-robots-can-give-directions-and-learn-your-tiktok-dances-045049798.html?src=rss",
+        "published": "Tue, 06 Jan 2026 04:50:49 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>For better or worse, CES 2026 is already shaping up to be a big year for humanoid robots. Chinese company Agibot showed up with two: the roughly human-sized <a class=\"link\" href=\"https://www.agibot.com/products/A2_D\" target=\"_blank\">A2</a> and the slightly smaller <a class=\"link\" href=\"https://www.agibot.com/products/X2\" target=\"_blank\">X2</a>, both of which were displaying their surprisingly impressive dancing abilities.&nbsp;</p><p>We watched both robots walk around, wave at passersby and s"
+    },
+    {
+        "id": "https://www.engadget.com/general/the-handy-2-pro-is-an-overclockable-sex-toy-044456140.html?src=rss",
+        "title": "The Handy 2 Pro is an 'overclockable' sex toy",
+        "link": "https://www.engadget.com/general/the-handy-2-pro-is-an-overclockable-sex-toy-044456140.html?src=rss",
+        "published": "Tue, 06 Jan 2026 04:44:56 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><strong><em>The following article discusses adult themes.</em></strong></p><p>One surprising find at CES 2026 comes from OhDoki, the Norwegian makers of The Handy, a <a class=\"link\" href=\"https://www.engadget.com/2017-04-13-finally-a-good-digital-masturbator.html\" target=\"_blank\">smart stroking</a> device. It turned up to the desert with two new products, the Handy 2 and the Handy 2 Pro. Fundamentally, they\u2019re the same device, but the Handy 2 Pro comes with a far bigger battery, taking the us"
+    },
+    {
+        "id": "https://www.engadget.com/transportation/evs/sony-honda-mobilitys-afeela-prototype-2026-puts-an-suv-spin-on-its-too-familiar-sedan-at-ces-043927882.html?src=rss",
+        "title": "Sony Honda Mobility\u2019s Afeela Prototype 2026 puts an SUV spin on its too-familiar sedan at CES",
+        "link": "https://www.engadget.com/transportation/evs/sony-honda-mobilitys-afeela-prototype-2026-puts-an-suv-spin-on-its-too-familiar-sedan-at-ces-043927882.html?src=rss",
+        "published": "Tue, 06 Jan 2026 04:39:27 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Last year in Las Vegas at CES 2025, Sony Honda Mobility displayed <a class=\"link\" href=\"https://www.engadget.com/transportation/evs/sony-opens-afeela-1-ev-reservations-at-ces-2025-011826937.html\" target=\"_blank\">yet another revision</a> of its now-familiar yet still-unreleased Afeela 1 sedan. With a starting price of $89,900 and a maximum range of 300 miles, it didn't seem like a great value proposition. 12 months later, the math still hasn't changed, but would-be buyers now have a slightly t"
+    },
+    {
+        "id": "https://www.engadget.com/wearables/garmin-food-tracking-feature-connect-plus-ces-2026-043231948.html?src=rss",
+        "title": "CES 2026: Garmin had the nerve to launch a food-tracking feature in Las Vegas",
+        "link": "https://www.engadget.com/wearables/garmin-food-tracking-feature-connect-plus-ces-2026-043231948.html?src=rss",
+        "published": "Tue, 06 Jan 2026 04:32:38 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Garmin\u2019s big announcement for CES 2026 wasn\u2019t another fitness watch. Instead, it revealed it is adding <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=4c7f75f5-4803-438a-a506-12a0ccb4ede4&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=e8d55c66-4e69-42f4-a7af-b213555618ef&amp;featureId=text-link&amp;merchantName=Garmin&amp;linkText=food+%28and+calorie%29+tracking+to+its+Connect+app&amp;custData=eyJzb3VyY2VOYW1lIjoiV2ViLURlc2t0b3AtVmVyaXpvbiIsImxhbm"
+    },
+    {
+        "id": "https://zakhary.dev/blog/gbc-web-button",
+        "title": "GBC Boot Animation 88\u00d731 Web Button",
+        "link": "https://zakhary.dev/blog/gbc-web-button",
+        "published": "Tue, 06 Jan 2026 02:20:00 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46507963\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/rayneo-air-4-pro-hdr10-smart-glasses-ces/",
+        "title": "I wore the world's first HDR10 smart glasses, and they can easily replace my home TV",
+        "link": "https://www.zdnet.com/article/rayneo-air-4-pro-hdr10-smart-glasses-ces/",
+        "published": "Tue, 06 Jan 2026 05:13:00 GMT",
+        "source": "Latest news",
+        "summary": "The RayNeo Air 4 Pro have launched at CES 2026, with a feature set that we've yet to see from XR glasses."
+    },
+    {
+        "id": "https://www.zdnet.com/article/most-exciting-ai-robots-ces-2026/",
+        "title": "The most exciting AI tech I've tried at CES 2026 so far (including a cleaning robot)",
+        "link": "https://www.zdnet.com/article/most-exciting-ai-robots-ces-2026/",
+        "published": "Tue, 06 Jan 2026 05:04:00 GMT",
+        "source": "Latest news",
+        "summary": "AI is meeting hardware more than ever at this year's show, with some new and exciting applications emerging."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-android-phone-settings-improve-battery-life/",
+        "title": "I changed 12 settings on my Android phone to significantly improve the battery life",
+        "link": "https://www.zdnet.com/article/best-android-phone-settings-improve-battery-life/",
+        "published": "Tue, 06 Jan 2026 05:01:00 GMT",
+        "source": "Latest news",
+        "summary": "Battery dropping too fast? Consult these 12 expert-approved tips to make your device last longer."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-clear-your-iphone-cache-2026/",
+        "title": "How to clear your iPhone cache (and why it greatly improves the performance)",
+        "link": "https://www.zdnet.com/article/how-to-clear-your-iphone-cache-2026/",
+        "published": "Tue, 06 Jan 2026 05:00:00 GMT",
+        "source": "Latest news",
+        "summary": "If your iPhone is running slow, follow this quick routine to boost its speed and free up space - here's how."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ces-2026-live-updates-1-6-26/",
+        "title": "CES 2026 Day 1: The biggest news stories on TVs, smart glasses, robots and more live",
+        "link": "https://www.zdnet.com/article/ces-2026-live-updates-1-6-26/",
+        "published": "Tue, 06 Jan 2026 04:38:00 GMT",
+        "source": "Latest news",
+        "summary": "The world's biggest technology trade show is a go, and we're tracking the best announcements from top brands all week long."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/gig-workers-strike-former-irs-officer-neena-singh",
+        "title": "Gig workers\u2019 strike; Former IRS officer-turned-artist",
+        "link": "https://yourstory.com/2026/01/gig-workers-strike-former-irs-officer-neena-singh",
+        "published": "Tue, 06 Jan 2026 02:00:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The Telangana Gig and Platform Workers Union is one of the earliest state\u2011level unions working for the interests and rights of gig and platform workers."
+    },
+    {
+        "id": "https://inc42.com/buzz/traya-slips-into-the-red-in-fy25-posts-inr-22-5-cr-loss/",
+        "title": "Traya Slips Into The Red In FY25, Posts INR 22.5 Cr Loss",
+        "link": "https://inc42.com/buzz/traya-slips-into-the-red-in-fy25-posts-inr-22-5-cr-loss/",
+        "published": "Tue, 06 Jan 2026 04:57:33 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Traya FY25\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Artboard-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Haircare solutions startup Traya has posted a net loss of INR 22.5 Cr in the fiscal year 2024-25 (FY25) from&#8230;"
     }
 ]
