--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -41566,5 +41566,53 @@
         "published": "Tue, 06 Jan 2026 04:57:33 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Traya FY25\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Artboard-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Haircare solutions startup Traya has posted a net loss of INR 22.5 Cr in the fiscal year 2024-25 (FY25) from&#8230;"
+    },
+    {
+        "id": "https://www.theverge.com/tech/854688/nvidias-geforce-now-is-getting-native-linux-and-fire-tv-apps",
+        "title": "Nvidia\u2019s GeForce Now is getting native Linux and Fire TV apps",
+        "link": "https://www.theverge.com/tech/854688/nvidias-geforce-now-is-getting-native-linux-and-fire-tv-apps",
+        "published": "2026-01-06T00:22:13-05:00",
+        "source": "The Verge",
+        "summary": "Nvidia's RTX 5080 rollout for its GeForce Now cloud gaming service is now complete, so it's ready to announce some additional features for subscribers. In the coming months, Nvidia is planning to launch native GeForce Now apps for Linux and Amazon's Fire TV devices, alongside flight control support for its cloud gaming service. The native [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2026/01/intel-launches-core-ultra-series-3-cpus-made-using-its-long-awaited-18a-process/",
+        "title": "Intel launches Core Ultra Series 3 CPUs, made using its long-awaited 18A process",
+        "link": "https://arstechnica.com/gadgets/2026/01/intel-launches-core-ultra-series-3-cpus-made-using-its-long-awaited-18a-process/",
+        "published": "Tue, 06 Jan 2026 03:45:49 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "New chips launch \"this month,\" targeting high-end ultraportable PCs."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/nvidia-announces-dlss-45-at-ces-2026-053000128.html?src=rss",
+        "title": "NVIDIA announces DLSS 4.5 at CES 2026",
+        "link": "https://www.engadget.com/gaming/nvidia-announces-dlss-45-at-ces-2026-053000128.html?src=rss",
+        "published": "Tue, 06 Jan 2026 05:30:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Just like <a class=\"link\" href=\"https://www.engadget.com/computing/nvidia-announced-dlss-4-will-come-to-all-rtx-gpus-044835926.html\" target=\"_blank\">last year</a>, NVIDIA has used some of its time on the CES stage to introduce an upgraded version of its real-time image-upscaling technology. The new DLSS 4.5 promises sharper visuals with the 2nd Generation Super Resolution Transformer, which the company says will deliver better temporal stability, reduced ghosting and improved anti-aliasing. T"
+    },
+    {
+        "id": "https://www.zdnet.com/article/10-favorite-pocket-sized-tools/",
+        "title": "10 tiny gadgets I never leave home without (and how they work)",
+        "link": "https://www.zdnet.com/article/10-favorite-pocket-sized-tools/",
+        "published": "Tue, 06 Jan 2026 05:17:00 GMT",
+        "source": "Latest news",
+        "summary": "If you're a fan of portable, practical, and affordable tools, these options deliver fantastic value."
+    },
+    {
+        "id": "https://www.zdnet.com/article/change-tv-settings-improve-performance/",
+        "title": "I changed 5 settings on my TV to significantly improve the performance",
+        "link": "https://www.zdnet.com/article/change-tv-settings-improve-performance/",
+        "published": "Tue, 06 Jan 2026 05:16:00 GMT",
+        "source": "Latest news",
+        "summary": "Making a few simple adjustments to your TV's basic settings can instantly enhance the picture quality. Here's how."
+    },
+    {
+        "id": "https://inc42.com/buzz/gainbitcoin-scam-pmla-court-summons-raj-kundra-after-ed-files-chargesheet/",
+        "title": "GainBitcoin Scam: PMLA Court Summons Raj Kundra After ED Files Chargesheet",
+        "link": "https://inc42.com/buzz/gainbitcoin-scam-pmla-court-summons-raj-kundra-after-ed-files-chargesheet/",
+        "published": "Tue, 06 Jan 2026 05:25:42 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"PMLA summons Raj Kundra\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/raj-kundra-feature.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1359\" />Businessman and actor Shilpa Shetty\u2019s husband Raj Kundra has reportedly been summoned by a special PMLA court in Mumbai after&#8230;"
     }
 ]
