📚 Auto-update: News data refreshed - 2026-01-06 07:18 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -41614,5 +41614,53 @@
         "published": "Tue, 06 Jan 2026 05:25:42 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"PMLA summons Raj Kundra\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/raj-kundra-feature.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1359\" />Businessman and actor Shilpa Shetty\u2019s husband Raj Kundra has reportedly been summoned by a special PMLA court in Mumbai after&#8230;"
+    },
+    {
+        "id": "https://enclose.horse/",
+        "title": "enclose.horse",
+        "link": "https://enclose.horse/",
+        "published": "Tue, 06 Jan 2026 06:01:57 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46509211\">Comments</a>"
+    },
+    {
+        "id": "https://pluralistic.net/2026/01/01/39c3/",
+        "title": "The Post-American Internet",
+        "link": "https://pluralistic.net/2026/01/01/39c3/",
+        "published": "Tue, 06 Jan 2026 05:20:40 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46509019\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-google-pixel-settings-change-2026/",
+        "title": "I changed 10 settings on my Pixel phone to instantly improve the user experience",
+        "link": "https://www.zdnet.com/article/best-google-pixel-settings-change-2026/",
+        "published": "Tue, 06 Jan 2026 06:32:00 GMT",
+        "source": "Latest news",
+        "summary": "Google's Pixel lineup of phones are packed with smart features - but a few setting tweaks can make them even better."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/suprdaily-founder-puneet-kumar-quits-nexus-venture-partners/articleshow/126367585.cms",
+        "title": "SuprDaily founder Puneet Kumar quits Nexus Venture Partners to launch new startup",
+        "link": "https://economictimes.indiatimes.com/tech/technology/suprdaily-founder-puneet-kumar-quits-nexus-venture-partners/articleshow/126367585.cms",
+        "published": "Tue, 06 Jan 2026 12:07:50 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "SuprDaily cofounder Puneet Kumar has left Nexus Venture Partners less than two years after joining, sources told ET. He is reportedly planning a new startup in stealth mode. His exit follows several senior departures at Nexus, including Sameer Brij Verma and founding partner Sandeep Singhal, highlighting ongoing leadership changes at the firm."
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-explained-openai-audio-first-personal-device-voice-first-ai/",
+        "title": "Explained: OpenAI\u2019s Efforts For Audio-First Personal Device And What It Tells About Voice-First AI",
+        "link": "https://www.medianama.com/2026/01/223-explained-openai-audio-first-personal-device-voice-first-ai/",
+        "published": "Tue, 06 Jan 2026 06:53:59 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Learn what the implications of voice-first AI systems are amid OpenAI betting big on audio AI and gearing up for a voice-led personal device launch early next year.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-explained-openai-audio-first-personal-device-voice-first-ai/\">Explained: OpenAI&#8217;s Efforts For Audio-First Personal Device And What It Tells About Voice-First AI</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-musician-sues-stability-ai-audiosparx-over-ai-music-training-copyright-lawsuit/",
+        "title": "Musician Files Lawsuit Against Stability AI For Using His Music For Training Despite Opt-Out Requests",
+        "link": "https://www.medianama.com/2026/01/223-musician-sues-stability-ai-audiosparx-over-ai-music-training-copyright-lawsuit/",
+        "published": "Tue, 06 Jan 2026 06:20:11 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>A US musician has sued Stability AI and AudioSparx, alleging his music was used to train an AI audio model despite repeated opt-out and removal requests. The case adds pressure on how AI firms handle consent and training data.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-musician-sues-stability-ai-audiosparx-over-ai-music-training-copyright-lawsuit/\">Musician Files Lawsuit Against Stability AI For Using His Music For Training Despite Opt-Out Requests</a> appeared first on <a"
     }
 ]
