📚 Auto-update: News data refreshed - 2026-01-06 08:17 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -41662,5 +41662,85 @@
         "published": "Tue, 06 Jan 2026 06:20:11 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>A US musician has sued Stability AI and AudioSparx, alleging his music was used to train an AI audio model despite repeated opt-out and removal requests. The case adds pressure on how AI firms handle consent and training data.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-musician-sues-stability-ai-audiosparx-over-ai-music-training-copyright-lawsuit/\">Musician Files Lawsuit Against Stability AI For Using His Music For Training Despite Opt-Out Requests</a> appeared first on <a"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/05/narwal-adds-ai-to-its-vacuum-cleaners-to-monitor-pets-and-find-jewelry/",
+        "title": "Narwal adds AI to its vacuum cleaners to monitor pets and find jewelry",
+        "link": "https://techcrunch.com/2026/01/05/narwal-adds-ai-to-its-vacuum-cleaners-to-monitor-pets-and-find-jewelry/",
+        "published": "Tue, 06 Jan 2026 07:18:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Narwal's new robo vacuum cleaner switches to quiet mode near a baby's crib."
+    },
+    {
+        "id": "https://www.theverge.com/tech/853290/shokz-open-fit-pro-hands-on-ces-2026-headphones-wearables",
+        "title": "These open-ear buds actually have decent noise reduction",
+        "link": "https://www.theverge.com/tech/853290/shokz-open-fit-pro-hands-on-ces-2026-headphones-wearables",
+        "published": "2026-01-06T03:00:00-05:00",
+        "source": "The Verge",
+        "summary": "My biggest gripe about open-ear buds is that they're rotten for loud city commutes. Cue a pedantic audiophile pointing out that the whole premise of open-ear buds is to not block out sound. Yes, yes. But the unfortunate truth is that often means if you want open-ear buds for one situation, you'll have to buy [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/856077/yoona-deskmate-iphone-robot-companion-ai-assistant",
+        "title": "This desktop charger turns your iPhone into a robotic AI assistant",
+        "link": "https://www.theverge.com/tech/856077/yoona-deskmate-iphone-robot-companion-ai-assistant",
+        "published": "2026-01-06T02:59:19-05:00",
+        "source": "The Verge",
+        "summary": "CES is packed with AI companions and assistant robots this year, but the DeskMate from Loona is a clever take on the idea: it's a desktop charging hub, with three USB-C ports, one USB-A, and a MagSafe pad, that automatically activates an AI companion app when you attach your iPhone to the wireless charger. What's [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/audio/headphones/ces-2026-shokz-new-earbuds-effectively-reduce-noise-while-keeping-your-ears-open-080000996.html?src=rss",
+        "title": "CES 2026: Shokz' new earbuds effectively reduce noise while keeping your ears open",
+        "link": "https://www.engadget.com/audio/headphones/ces-2026-shokz-new-earbuds-effectively-reduce-noise-while-keeping-your-ears-open-080000996.html?src=rss",
+        "published": "Tue, 06 Jan 2026 08:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Shokz may have made its name with <a class=\"link\" href=\"https://www.engadget.com/aftershokz-shokz-openrun-pro-bone-conduction-headphones-bass-030031419.html\" target=\"_blank\">bone-conduction headsets</a>, but the company has also built <a class=\"link\" href=\"https://www.engadget.com/audio/headphones/the-shokz-openfit-2-promises-better-sound-and-longer-battery-life-130016786.html\" target=\"_blank\">open-style earbuds</a> in recent years. At CES 2026, the company is debuting its most recent model, "
+    },
+    {
+        "id": "https://www.zdnet.com/article/shokzs-open-earbuds-ces-2026/",
+        "title": "Shokz's latest earbuds have a unique trick that puts them above the OpenRun for me",
+        "link": "https://www.zdnet.com/article/shokzs-open-earbuds-ces-2026/",
+        "published": "Tue, 06 Jan 2026 08:00:41 GMT",
+        "source": "Latest news",
+        "summary": "Open-ear earbuds allow you to hear everything, but what if you only want to hear some things?"
+    },
+    {
+        "id": "https://www.zdnet.com/article/belkin-connectair-ces/",
+        "title": "This Belkin wireless adapter lets you ditch HDMI cables for good - here's how it works",
+        "link": "https://www.zdnet.com/article/belkin-connectair-ces/",
+        "published": "Tue, 06 Jan 2026 07:32:00 GMT",
+        "source": "Latest news",
+        "summary": "The Belkin ConnectAir, unveiled at CES, makes it easy to cast to any screen without an app or Wi-Fi."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/made-in-india-payments-startup-speed-raises-8m-from-tether-and-ego-death-capital",
+        "title": "Made-in-India payments startup Speed raises $8M from Tether and ego death capital",
+        "link": "https://yourstory.com/2026/01/made-in-india-payments-startup-speed-raises-8m-from-tether-and-ego-death-capital",
+        "published": "Tue, 06 Jan 2026 07:48:09 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Speed, a Made in India Company, Raises $8M from Tether and ego death capital to Build the Future of Lightning-Powered Payments\n\nHow an India-led engineering team under two founders turned a simple insight into one of the fastest-growing Lightning-based payment networks\u2014and earned the backing of two"
+    },
+    {
+        "id": "https://yourstory.com/2026/01/2026-reading-goals-book-habit",
+        "title": "2026 Reading goals: How to create a lasting book habit",
+        "link": "https://yourstory.com/2026/01/2026-reading-goals-book-habit",
+        "published": "Tue, 06 Jan 2026 07:25:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Build realistic reading goals for 2026 and learn how to create a lasting book habit without pressure, burnout, or unrealistic challenges."
+    },
+    {
+        "id": "https://inc42.com/features/from-hyderabad-to-pune-which-city-holds-indias-startup-hub-baton/",
+        "title": "From Hyderabad To Pune : Which City Holds India\u2019s Startup Hub Baton",
+        "link": "https://inc42.com/features/from-hyderabad-to-pune-which-city-holds-indias-startup-hub-baton/",
+        "published": "Tue, 06 Jan 2026 08:02:13 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"About five non-metro cities, namely Pune, Hyderabad, Chennai, Ahmedabad and Jaipur, stand out in terms of deals secured since 2014.\u00a0\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/FTR-100-3.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />The Indian startup ecosystem entered 2026 amid a quiet but consequential reset. While the traditional power centres \u2014 Bengaluru, "
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-jabalpur-court-acquits-tellytorrents-site-operator-piracy-case/",
+        "title": "TellyTorrents Movie Piracy Case\u2014A Tale of Evidence Missing in Action",
+        "link": "https://www.medianama.com/2026/01/223-jabalpur-court-acquits-tellytorrents-site-operator-piracy-case/",
+        "published": "Tue, 06 Jan 2026 07:28:36 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>The Jabalpur court has acquitted the operator of TellyTorrents in a decade-long movie piracy case, citing lack of forensic evidence, documentary proof, and procedural lapses. This verdict highlights how criminal copyright prosecutions in India often fail without independent expert analysis, even in high-profile cases.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-jabalpur-court-acquits-tellytorrents-site-operator-piracy-case/\">TellyTorrents Movie Piracy Case\u2014A Tale of Evidenc"
     }
 ]
