📚 Auto-update: News data refreshed - 2026-01-06 10:13 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -41806,5 +41806,93 @@
         "published": "Tue, 06 Jan 2026 09:06:31 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>The Enforcement Directorate has conducted multiple searches linked to influencer Anurag Dwivedi as part of an alleged illegal online betting and money-laundering probe under the PMLA. A timeline of enforcement action in an illegal online betting probe since the real-money gaming ban.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-ed-raids-anurag-dwivedi-rmg-ban-online-betting-timeline/\">ED Raids YouTuber and Influencer Anurag Dwivedi in Betting Probe: A Timeline Of Raids Since"
+    },
+    {
+        "id": "https://www.theverge.com/news/856141/samsung-display-creaseless-panel-foldable-iphone-ces",
+        "title": "Is this the folding iPhone&#8217;s creaseless display?",
+        "link": "https://www.theverge.com/news/856141/samsung-display-creaseless-panel-foldable-iphone-ces",
+        "published": "2026-01-06T04:25:15-05:00",
+        "source": "The Verge",
+        "summary": "Samsung Display showcased a new foldable OLED panel at CES that doesn't have a visible crease - something that currently blights every foldable phone on the market. This could be our first look at the panel used in the next generation of Samsung's Galaxy foldables and even the folding iPhone, given that Samsung Display is [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/gallery/the-best-ventless-fireplace/",
+        "title": "The Best Ventless Fireplaces for Cozy Vibes (2026)",
+        "link": "https://www.wired.com/gallery/the-best-ventless-fireplace/",
+        "published": "Tue, 06 Jan 2026 10:03:00 +0000",
+        "source": "WIRED",
+        "summary": "No chimney? No problem. LED and gel fuel fireplaces are excellent alternatives for those who can\u2019t or don\u2019t want to burn wood. We tried one of each to see which method is best."
+    },
+    {
+        "id": "https://www.wired.com/story/3-keys-understanding-trumps-retro-coup-in-venezuela/",
+        "title": "The 3 Keys to Understanding Trump\u2019s Retro Coup in Venezuela",
+        "link": "https://www.wired.com/story/3-keys-understanding-trumps-retro-coup-in-venezuela/",
+        "published": "Tue, 06 Jan 2026 10:00:00 +0000",
+        "source": "WIRED",
+        "summary": "This weekend\u2019s invasion was both a throwback to the last century and a new, uniquely Trumpian nightmare\u2014one that\u2019s just beginning."
+    },
+    {
+        "id": "https://www.engadget.com/audio/speakers/this-speaker-by-victrola-sits-underneath-turntables-and-streams-audio-via-bluetooth-100021991.html?src=rss",
+        "title": "This speaker by Victrola sits underneath turntables and streams audio via Bluetooth",
+        "link": "https://www.engadget.com/audio/speakers/this-speaker-by-victrola-sits-underneath-turntables-and-streams-audio-via-bluetooth-100021991.html?src=rss",
+        "published": "Tue, 06 Jan 2026 10:00:21 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Noted turntable manufacturer Victrola just announced the Soundstage speaker at CES. This thin little doodad actually sits underneath turntables, removing the need for a full stereo set-up. The Soundstage isn't the first speaker that offers this functionality, but this one has tech-forward features.</p>\n<p>It offers multiple connection options, including Bluetooth. Many newer Victrola turntables can do Bluetooth streaming, so adding this speaker to a setup would be extremely simple. Otherwise,"
+    },
+    {
+        "id": "https://www.engadget.com/audio/speakers/cambridge-audio-unveils-three-wireless-bookshelf-speakers-at-ces-100000178.html?src=rss",
+        "title": "Cambridge Audio unveils three wireless bookshelf speakers at CES",
+        "link": "https://www.engadget.com/audio/speakers/cambridge-audio-unveils-three-wireless-bookshelf-speakers-at-ces-100000178.html?src=rss",
+        "published": "Tue, 06 Jan 2026 10:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Cambridge Audio has three new active speakers at CES 2026. The L/R Series is a trio of active bookshelf-style speakers, each with wired and wireless modes.</p><p>The flagship L/R X is an 800W model (400W per speaker). The largest of the three, it unsurprisingly carries the highest price, at $2,299. It uses a 2.5-way acoustic design: a 28mm Torus tweeter alongside dual 5-inch woofers. The L/R X has a pair of 6-inch force-canceling passive radiators, a 64-bit audio pipeline, DynamEQ and Wi-Fi s"
+    },
+    {
+        "id": "https://www.technologyreview.com/2026/01/06/1130707/why-ai-predictions-are-so-hard/",
+        "title": "Why AI predictions are so hard",
+        "link": "https://www.technologyreview.com/2026/01/06/1130707/why-ai-predictions-are-so-hard/",
+        "published": "Tue, 06 Jan 2026 10:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "This story originally appeared in The Algorithm, our weekly newsletter on AI. To get stories like this in your inbox first,\u00a0sign up here. Sometimes AI feels like a niche topic to write about, but then the holidays happen, and I hear relatives of all ages talking about cases of chatbot-induced psychosis, blaming rising electricity prices&#8230;"
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-we-test-tablets/",
+        "title": "How we test tablets at ZDNET in 2026",
+        "link": "https://www.zdnet.com/article/how-we-test-tablets/",
+        "published": "Tue, 06 Jan 2026 10:00:39 GMT",
+        "source": "Latest news",
+        "summary": "Testing tablets involves a systematic method that combines quantitative testing with everyday performance. Learn more about how ZDNET reviewers test tablets in 2026."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/book-genres-trends-2026",
+        "title": "Reading trends in 2026: Genres shaping modern readers",
+        "link": "https://yourstory.com/2026/01/book-genres-trends-2026",
+        "published": "Tue, 06 Jan 2026 09:55:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Discover the book genres set to dominate 2026 as reader tastes shift toward deeper stories, fresh perspectives, and meaningful escapes."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/cars24-acquires-vehicle-information-platform-carinfo",
+        "title": "Cars24 acquires vehicle information platform CarInfo",
+        "link": "https://yourstory.com/2026/01/cars24-acquires-vehicle-information-platform-carinfo",
+        "published": "Tue, 06 Jan 2026 06:32:07 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The Carinfo app aims to simplify car and bike ownership by making critical vehicle information easily accessible."
+    },
+    {
+        "id": "https://inc42.com/buzz/amazon-pay-rolls-out-fixed-deposits-to-deepen-its-financial-service-offerings/",
+        "title": "Amazon Pay Rolls Out Fixed Deposits To Deepen Its Financial Service Offerings",
+        "link": "https://inc42.com/buzz/amazon-pay-rolls-out-fixed-deposits-to-deepen-its-financial-service-offerings/",
+        "published": "Tue, 06 Jan 2026 10:04:08 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Amazon Pay Rolls Out Fixed Deposits To Deepen Its Financial Service Offerings\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/amazon-exports-featured-1.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />With an eye to expand its financial services offerings, Amazon Pay has launched a fixed deposit (FD) service pan-India. The&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/centre-mulls-extending-tax-deferral-on-esops-for-dpiit-startups-report/",
+        "title": "Centre Mulls Extending Tax Deferral On ESOPs For DPIIT Startups: Report",
+        "link": "https://inc42.com/buzz/centre-mulls-extending-tax-deferral-on-esops-for-dpiit-startups-report/",
+        "published": "Tue, 06 Jan 2026 09:55:30 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"The government is reportedly considering extension of four-year tax deferral on ESOPs to all the startups recognised by the DPIIT\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/stakcbox-funding-featured-1-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />With the Union Budget 2026-27 around the corner, the government is reportedly considering extension of four-year"
     }
 ]
